--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -1,1 +1,6 @@
-{{outlet}}
+{{question-detail question=model.question}}
+<!-- save and delete will go above -->
+
+<!-- answer form here -->
+
+<!-- answer-list here -->
