--- a/app/templates/components/question-detail.hbs
+++ b/app/templates/components/question-detail.hbs
@@ -3,5 +3,5 @@
 <p>
   {{question.notes}}
 </p>
-{{deleteQuestion="deleteQuestion"}}
+{{question-edit deleteQuestion="deleteQuestion"}}
 <!-- edit, save and delete goes here -->
