update edit question form

--- a/app/templates/components/question-detail.hbs
+++ b/app/templates/components/question-detail.hbs
@@ -3,5 +3,5 @@
 <p>
   {{question.notes}}
 </p>
-{{question-edit deleteQuestion="deleteQuestion"}}
-<!-- edit, save and delete goes here -->
+{{question-edit question=question deleteQuestion="deleteQuestion"}}
+<!--save goes here -->
