fix bug in question model

--- a/app/templates/components/question-edit.hbs
+++ b/app/templates/components/question-edit.hbs
@@ -13,7 +13,8 @@
       <label for="notes">Notes: </label>
       {{input value=question.notes id="notes" placeholder=question.notes}}
     </div>
-    <button>Save</button>
+    <button {{action 'save' question}}>Save</button>
+    <!-- add cancel button? -->
   </form>
 {{else}}
   <button {{action 'showEditForm'}}>Edit</button>
