create most of logic for save, edit and delete a question... unable to save

--- a/app/templates/components/question-detail.hbs
+++ b/app/templates/components/question-detail.hbs
@@ -3,5 +3,4 @@
 <p>
   {{question.notes}}
 </p>
-{{question-edit question=question deleteQuestion="deleteQuestion"}}
-<!--save goes here -->
+{{question-edit question=question save="save" deleteQuestion="deleteQuestion"}}
