--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -1,5 +1,4 @@
-{{question-detail question=model.question}}
-<!-- save and delete will go above -->
+{{question-detail question=model.question save="EditQuestion" delete="deleteQuestion"}}
 
 <!-- answer form here -->
 
