fix typo for editquestion

--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -1,4 +1,4 @@
-{{question-detail question=model.question save="EditQuestion" delete="deleteQuestion"}}
+{{question-detail question=model.question save="editQuestion" delete="deleteQuestion"}}
 
 <!-- answer form here -->
 
