fix add an answer. new bug - cannot delete. button unresponsive

--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -1,5 +1,5 @@
 {{question-detail question=model.question save="editQuestion" delete="deleteQuestion"}}
 
-<!-- answer form here -->
+{{answer-new question=model.question save="saveAnswer"}}
 
 {{answer-list question=model.question}}
