gives user option to cancel on adding an answer

--- a/app/templates/components/answer-new.hbs
+++ b/app/templates/components/answer-new.hbs
@@ -10,6 +10,7 @@
       {{input value=author id="author"}}
     </div>
     <button {{action 'save' question}}>Answer!</button>
+    <button {{action 'hideAnswerForm'}}>Cancel</button>
   </form>
 {{else}}
   <button {{action 'showAnswerForm'}}>Give an Answer</button>
