--- a/app/templates/components/question-new.hbs
+++ b/app/templates/components/question-new.hbs
@@ -14,6 +14,7 @@
       {{input value=notes id="notes"}}
     </div>
     <button {{action 'save'}}>Ask!</button>
+    <button {{action 'hideNewQuestionForm'}}>Cancel</button>
   </form>
 {{else}}
   <button {{action 'showNewQuestionForm'}}>Ask a Question</button>
