change author property in answer to fix bug when user tries to edit ? and A at the same time

--- a/app/templates/components/answer-new.hbs
+++ b/app/templates/components/answer-new.hbs
@@ -6,8 +6,8 @@
       {{input value=answer id="answer"}}
     </div>
     <div class="form-group">
-      <label for="author">Answered By: </label>
-      {{input value=author id="author"}}
+      <label for="answer_author">Answered By: </label>
+      {{input value=answer_author id="answer_author"}}
     </div>
     <button {{action 'save' question}}>Answer!</button>
     <button {{action 'hideAnswerForm'}}>Cancel</button>
