reset code before trying to put "required" in text input

--- a/app/templates/components/answer-new.hbs
+++ b/app/templates/components/answer-new.hbs
@@ -3,7 +3,7 @@
   <form>
     <div class="form-group">
       <label for="answer">answer: </label>
-      {{input value=answer id="answer"}}
+      {{textarea value=answer id="answer"}}
     </div>
     <div class="form-group">
       <label for="answer_author">Answered By: </label>
