--- a/app/templates/components/question-new.hbs
+++ b/app/templates/components/question-new.hbs
@@ -11,7 +11,7 @@
     </div>
     <div class="form-group">
       <label for="notes">Additional Info: </label>
-      {{input value=notes id="notes"}}
+      {{textarea value=notes id="notes"}}
     </div>
     <button {{action 'save'}}>Ask!</button>
     <button {{action 'hideNewQuestionForm'}}>Cancel</button>
