add an avatar for the answer author

--- a/app/templates/components/answer-tile.hbs
+++ b/app/templates/components/answer-tile.hbs
@@ -1,2 +1,3 @@
 {{answer.answer}}<br>
+<img src="{{answer.answer_author_avatar}}" alt="{{answer.answer_author}}" /><br>
 Answered by: {{answer.answer_author}}
