--- a/app/templates/components/answer-new.hbs
+++ b/app/templates/components/answer-new.hbs
@@ -9,6 +9,10 @@
       <label for="answer_author">Answered By: </label>
       {{input value=answer_author id="answer_author"}}
     </div>
+    <div class="form-group">
+      <label for="answer_author_avatar">Your Avatar URL: </label>
+      {{input value=answer_author_avatar id="answer_author_avatar"}}
+    </div>
     <button {{action 'save' question}}>Answer!</button>
     <button {{action 'hideAnswerForm'}}>Cancel</button>
   </form>
