--- a/app/templates/components/question-edit.hbs
+++ b/app/templates/components/question-edit.hbs
@@ -10,8 +10,16 @@
       {{input value=question.author id="author" placeholder=question.author}}
     </div>
     <div class="form-group">
+      <label for="author_avatar">Your Avatar URL: </label>
+      {{input value=question.author_avatar id="author_avatar" placeholder=question.author_avatar}}
+    </div>
+    <div class="form-group">
       <label for="notes">Notes: </label>
       {{input value=question.notes id="notes" placeholder=question.notes}}
+    </div>
+    <div class="form-group">
+      <label for="image">Image URL: </label>
+      {{input value=question.image id="image" placeholder=question.image}}
     </div>
     <button {{action 'save' question}}>Save</button>
     <button {{action 'hideEditForm'}}>Cancel</button>
