--- a/app/templates/components/question-new.hbs
+++ b/app/templates/components/question-new.hbs
@@ -10,8 +10,16 @@
       {{input value=author id="author"}}
     </div>
     <div class="form-group">
+      <label for="author_avatar">Your Avatar URL: </label>
+      {{input value=author_avatar id="author_avatar"}}
+    </div>
+    <div class="form-group">
       <label for="notes">Additional Info: </label>
       {{textarea value=notes id="notes"}}
+    </div>
+    <div class="form-group">
+      <label for="image">Image URL: </label>
+      {{input value=image id="image"}}
     </div>
     <button {{action 'save'}}>Ask!</button>
     <button {{action 'hideNewQuestionForm'}}>Cancel</button>
