--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -1,2 +1,4 @@
 <h2>{{#link-to 'question' question.id}}{{question.question}}{{/link-to}}</h2>
 Asked by: <h5>{{question.author}}</h5>
+<img src="{{question.author_avatar}}" alt="question.question" />
+<img src="{{question.image}}" alt="{{question.question}}" />
