--- a/app/templates/components/question-new.hbs
+++ b/app/templates/components/question-new.hbs
@@ -1,29 +1,31 @@
 {{#if showNewQuestionForm}}
-  <h2>Ask Your Question</h2>
-  <form>
-    <div class="form-group">
-      <label for="question">Question: </label>
-      {{input value=question id="question"}}
-    </div>
-    <div class="form-group">
-      <label for="author">Asked By: </label>
-      {{input value=author id="author"}}
-    </div>
-    <div class="form-group">
-      <label for="author_avatar">Your Avatar URL: </label>
-      {{input value=author_avatar id="author_avatar"}}
-    </div>
-    <div class="form-group">
-      <label for="notes">Additional Info: </label>
-      {{textarea value=notes id="notes"}}
-    </div>
-    <div class="form-group">
-      <label for="image">Image URL: </label>
-      {{input value=image id="image"}}
-    </div>
-    <button {{action 'save'}}>Ask!</button>
-    <button {{action 'hideNewQuestionForm'}}>Cancel</button>
-  </form>
+  <div id="question-form">
+    <h2>Ask Your Question</h2>
+    <form>
+      <div class="form-group">
+        <label for="question">Question: </label>
+        {{input value=question id="question"}}
+      </div>
+      <div class="form-group">
+        <label for="author">Asked By: </label>
+        {{input value=author id="author"}}
+      </div>
+      <div class="form-group">
+        <label for="author_avatar">Your Avatar URL: </label>
+        {{input value=author_avatar id="author_avatar"}}
+      </div>
+      <div class="form-group">
+        <label for="notes">Additional Info: </label>
+        {{textarea value=notes id="notes"}}
+      </div>
+      <div class="form-group">
+        <label for="image">Image URL: </label>
+        {{input value=image id="image"}}
+      </div>
+      <button class="btn btn-success" {{action 'save'}}>Ask!</button>
+      <button class="btn btn-warning"{{action 'hideNewQuestionForm'}}>Cancel</button>
+    </form>
+  </div>
 {{else}}
-  <button {{action 'showNewQuestionForm'}}>Ask a Question</button>
+  <button class="btn-lg btn-primary" {{action 'showNewQuestionForm'}}>Ask a Question</button>
 {{/if}}
