--- a/app/templates/components/answer-tile.hbs
+++ b/app/templates/components/answer-tile.hbs
@@ -1,3 +1,5 @@
-{{answer.answer}}<br>
-<img src="{{answer.answer_author_avatar}}" alt="{{answer.answer_author}}" /><br>
-Answered by: {{answer.answer_author}}
+<div class="post-box">
+  <h3>{{answer.answer}}</h3><br>
+  <img class="avatar" src="{{answer.answer_author_avatar}}" alt="{{answer.answer_author}}" /><br>
+  Answered by: {{answer.answer_author}}
+</div>
