--- a/app/templates/components/question-new.hbs
+++ b/app/templates/components/question-new.hbs
@@ -27,5 +27,5 @@
     </form>
   </div>
 {{else}}
-  <button class="btn-lg btn-primary" {{action 'showNewQuestionForm'}}>Ask a Question</button>
+  <button id="ask-question" class="btn-lg btn-primary" {{action 'showNewQuestionForm'}}>Ask a Question</button>
 {{/if}}
