--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -1,7 +1,7 @@
 <div class="post-box">
   {{question-popularity question}}
   <img class="avatar" src="{{question.author_avatar}}" alt="question.question" />
-  <h4>Asked by: {{question.author}}</h4>
+  <h4>Asked by: {{askedBy}}</h4>
   <h2>{{#link-to 'question' question.id}}{{question.question}}{{/link-to}}</h2>
   <img class="q_image" src="{{question.image}}" alt="{{question.question}}" />
 </div>
