--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -4,4 +4,5 @@
   <h4>Asked by: {{askedBy}}</h4>
   <h2>{{#link-to 'question' question.id}}{{question.question}}{{/link-to}}</h2>
   <img class="q_image" src="{{question.image}}" alt="{{question.question}}" />
+  <button {{action 'addToFavorites' question}}>Favorite</button>
 </div>
