--- a/app/templates/components/display-favorites.hbs
+++ b/app/templates/components/display-favorites.hbs
@@ -1,1 +1,5 @@
-{{yield}}
+<h3>Hi from display favs</h3>
+{{#each favoritesList.questions as |question|}}
+  <p>1</p>
+  {{question.question}}
+{{/each}}
