--- a/app/templates/components/display-favorites.hbs
+++ b/app/templates/components/display-favorites.hbs
@@ -1,5 +1,4 @@
-<h3>Hi from display favs</h3>
+<h3>Favorite Questions</h3>
 {{#each favoritesList.questions as |question|}}
-  <p>1</p>
-  {{question.question}}
+  {{question.question}} by {{question.author}}
 {{/each}}
